# poc_codeql_bazel

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel  codeql_cli_bazel_build_go.sh  codeql_cli_python.sh
.github/workflows/: codeql_bazel_go.yml
projects/go_web/: BUILD.bazel  go.mod  main.go
projects/python_calculator/: BUILD.bazel  calculator_test.py
projects/python_vulnerable_app/: BUILD.bazel  main.py
