# For python
bazel_dep(name = "rules_python", version = "1.1.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//third_party:requirements.txt",
)

use_repo(pip, "pip")

# For go
bazel_dep(name = "rules_go", version = "0.52.0")