load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_web_lib",
    srcs = ["main.go"],
    importpath = "github.com/wissensalt/golang-bazel-monorepo/apps/app-one",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go_web",
    embed = [":go_web_lib"],
    visibility = ["//visibility:public"],
)
